[gd_scene load_steps=11 format=2]

[ext_resource path="res://CharredSkull.gd" type="Script" id=1]
[ext_resource path="res://Placeables/InteractableBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Doodads/CharredSkull.png" type="Texture" id=3]
[ext_resource path="res://SoundEffects/MagicSounds/Burning.mp3" type="AudioStream" id=4]
[ext_resource path="res://SoundEffects/NewSounds/SnapDistort.mp3" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 0.685547, 0, 1, 0.278809, 0.128605, 0.0163364, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 17.72
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -40.0
color = Color( 1, 0.623529, 0, 1 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 27.1662

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 372.5, 390.5 )

[node name="CharredSkull" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Embers" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.882353 )
amount = 5
lifetime = 0.5
process_material = SubResource( 3 )

[node name="Trigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 4 )

[node name="Burning" type="AudioStreamPlayer2D" parent="Trigger"]
stream = ExtResource( 4 )
volume_db = -11.065
pitch_scale = 0.93

[node name="Snap" type="AudioStreamPlayer2D" parent="Trigger"]
stream = ExtResource( 5 )

[node name="Pyrosense" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pyrosense"]
position = Vector2( -1.5, 1.5 )
shape = SubResource( 5 )

[node name="PyroInteract" parent="." instance=ExtResource( 2 )]
dialogueKeyToPlay = "CreepySkullPyro"
InteractTrigger = "OnInteract"

[node name="PyroNormal" parent="." instance=ExtResource( 2 )]
dialogueKeyToPlay = "CreepySkullNormal"
InteractTrigger = "OnInteract"

[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
[connection signal="body_entered" from="Pyrosense" to="." method="_on_Pyrosense_body_entered"]
